--- a/Android/cambioagora/res/values/strings.xml
+++ b/Android/cambioagora/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Cambio Now</string>
@@ -6,15 +7,12 @@
     <string name="txt_one_libra">British Pound Sterling</string>
     <string name="txt_one_dolar">US Dollar</string>
     <string name="txt_one_real">Brazilian Real</string>
-    
     <string name="txt_money_list">Currencies</string>
-    
     <string name="txt_money_select">Select a currency</string>
-
     <string name="txt_settings">Settings</string>
-
     <string name="txt_refresh">Refresh</string>
-    
+    <string name="txt_base_currency">Base Currency</string>
+
     <string-array name="type_money_array">
         <item>BRL</item>
         <item>EUR</item>
@@ -27,4 +25,5 @@
         <item>US Dollar</item>
         <item>British Pound Sterling</item>
     </string-array>
+
 </resources>
