--- a/Android/cambioagora/res/values/strings.xml
+++ b/Android/cambioagora/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="txt_settings">Settings</string>
     <string name="txt_refresh">Refresh</string>
     <string name="txt_base_currency">Base Currency</string>
+    <string name="txt_font">Source: </string>
+    <string name="txt_font_link">http://fx-exchange.com</string>
 
     <string-array name="type_money_array">
         <item>BRL</item>
